tests/ui/parser/issues/issue-62881.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-62881.rs:6:52
   |
LL | fn f() -> isize { fn f() -> isize {} pub f<
   |                 - unclosed delimiter
...
LL |
   |                                                    ^

error: missing `fn` or `struct` for function or struct definition
  --> $DIR/issue-62881.rs:3:41
   |
LL | fn f() -> isize { fn f() -> isize {} pub f<
   |                                         ^

error[E0308]: mismatched types
  --> $DIR/issue-62881.rs:3:29
   |
LL | fn f() -> isize { fn f() -> isize {} pub f<
   |                      -      ^^^^^ expected `isize`, found `()`
   |                      |
   |                      implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
